--- a/public/.htaccess
+++ b/public/.htaccess
@@ -13,3 +13,11 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+
+
+<Limit GET POST PUT OPTIONS>
+    Require all granted
+</Limit>
+<LimitExcept GET POST PUT OPTIONS>
+    Require all denied
+</LimitExcept>
